# shortplay

./: .gitignore  CLAUDE.md  README.md  SPEC.md
backend/: .env.example  Dockerfile  pyproject.toml  test.db
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  characters.py  deps.py  episodes.py  models.py  project_model.py  projects.py  prompts.py  providers.py  scenes.py  storyboards.py
backend/app/chains/: __init__.py  prompts.py
backend/app/chains/agents/: __init__.py  (+3 more)
backend/app/core/: config.py  database.py  security.py  websocket.py
backend/app/models/: __init__.py  base.py  character.py  episode.py  generated_image.py  model_definition.py  model_instance.py  model_instance_default.py  model_provider.py  project.py  project_model_override.py  prompt_template.py  prompt_template_default.py  scene.py  storyboard.py  style_template.py  video_task.py
backend/app/repositories/: __init__.py  base.py  character.py  episode.py  model_instance.py  project.py  project_model_override.py  scene.py  storyboard.py
backend/app/schemas/: __init__.py  character.py  common.py  episode.py  model.py  project.py  project_model.py  prompt.py  provider.py  scene.py  storyboard.py
backend/app/services/: character_service.py  episode_service.py  model_service.py  project_service.py  scene_service.py  storyboard_service.py
backend/test-results/: report.html
backend/tests/: conftest.py
backend/tests/ai/: test_end_to_end.py  test_entity_extractor.py  test_storyboarder.py
backend/tests/api/: __init__.py  test_characters.py  test_episodes.py  test_projects.py  test_scenes.py  test_storyboards.py
backend/tests/services/: test_character_service.py  test_episode_service.py  test_project_service.py  test_scene_service.py  test_storyboard_service.py
(+34 files in other folders)
